# gwc

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
IR_gen/: CMakeLists.txt  IR_generator.cpp  generators.cpp  generators.hpp
asm_IR/: CMakeLists.txt  isa.yml  main.asm  main.cpp
cmake/: declare_system_library.cmake
cppSample/: CMakeLists.txt  calculate.hpp  fakeMain.cpp  main.cpp  src.h
cppSample/llvm_file/: fakeMain.ll
frontend/: CMakeLists.txt  fakemain.gwc
frontend/driver/: driver.hpp  main.cpp
frontend/lexer/: lexer.hpp  lexer.ll
frontend/parser/: parser.yy
frontend/tree/: AST.hpp  node.hpp
graphicApi/: CMakeLists.txt  graphic.cpp  graphic.hpp
graphicApi/lib/: CMakeLists.txt
graphicApi/lib/include/: app.hpp  shader.hpp
graphicApi/lib/shaders/: common.frag  common.vert
graphicApi/lib/sources/: app.cpp  shader.cpp
isa/: CMakeLists.txt  main.cpp
llvmInstrumentalPass/: CMakeLists.txt  cfg_pass.cpp  instrDump.py  log.cpp
